# crate-metadata

./: .rustfmt.toml  Cargo.toml  README.md
src/: lib.rs  model.rs
